--- a/eda-and-visualization/eda_and_visualization.Rmd
+++ b/eda-and-visualization/eda_and_visualization.Rmd
@@ -84,28 +84,47 @@ DataExplorer::plot_missing(base_df) # shows % of NAs within each variable
 
 # Summary Statistics
 
-```{r}
-psych::describe(base_df)
-Hmisc::describe(base_df)
+## High-Level Summary Stats
+
+It is sometimes helpful to start with a broad brush and take a look at a host of summary stats all at once. In R there are many functions that can take care of this, but my preferred function is *the describe() function from the psych package*, which offers a concise collection of the stats that I most often care about for numeric variables. There is another function with the same name *from the Hmisc package*, but its output is much more expansive, and in most cases I don't find that it adds enough extra marginal utility over the psych package's version to be worth the extra bulk. Nonethless, I have included it below (commented out) should any reader wish to give it a try and make their own determination of its usefulness.
+
+```{r, warning=FALSE, message=FALSE}
+# packages useful for high-level summary stats (and more as well as we'll see later)
+library(psych)
+library(Hmisc)
+
+# omit = TRUE (used below) keeps only the numeric variables; default is = FALSE and coerces non-numerics 
+# Hmisc::describe(base_df)
+psych::describe(x = base_df, IQR = TRUE, omit = TRUE)
 ```
 
 
 # Histograms
 
+Having gone through the basic EDA steps above, by this point one might have a variety of variables, relationships, or trends worthy of further exploration. The sections below walk through some visualizations that may prove useful in drilling down deeper into the data once the highest-level EDA is already taken care of. 
+
+For the histogram exemplars below, imagine that our basic EDA lead us to want to dive deeper into the question of **"what sort or relationships, trends, and/or distributional intricacies, if any, can we observe by examining campaign fundraising goals by country of origin?"**
+
+## Simple Multi-Category Histogram 
+
 ```{r}
 base_df %>%
+  # select only our variables of interest 
   dplyr::select(goal, country) %>%
+  # filter to just 3 countries and set a goal cap
+  # this is mostly just arbitrary for the purpose of an easy-to-read exemplar 
   dplyr::filter(
     country %in% c("AU","DE","FR"),
     goal <= 100000
     ) %>%
   # base ggplot call
   ggplot(., aes(x=goal, fill=country)) +
-    # specifying the histogram
+    # specifying the histogram and the bin count
     geom_histogram(color = "black", position="dodge", bins=20) +
     # picking a colorblind-friendly color scheme and theme
     ggthemes::scale_fill_tableau() +
     ggthemes::theme_economist() +
+    # setting legend aesthetic details 
     theme(
       legend.position = "top",
       legend.title = element_text(size=12),
@@ -123,22 +142,28 @@ base_df %>%
 
 # Density Plots
 
-## 2 PDFs Compared
+There are times when visually one might prefer a density plot to a histogram, but in almost all cases they serve as substitutionary visualizatins. I find the one use case where density charts are particularly marginally useful as compared to histograms is when you want to compare distributional overlapping or deviation. 
+
+## 2 Probability Density Functions (PDFs) Compared
 
 ```{r}
 base_df %>%
+  # select only our variables of interest 
   dplyr::select(goal, country) %>%
+  # filter to just 2 countries and set a goal cap
+  # this is mostly just arbitrary for the purpose of an easy-to-read exemplar 
   dplyr::filter(
     country %in% c("GB","FR"),
     goal <= 25000
     ) %>%
   # base ggplot call
   ggplot(., aes(x=goal, fill=country)) +
-    # specifying the histogram
+    # specifying the density plot, alpha modulates translucency 
     geom_density(color = "black", alpha = 0.8) +
     # picking a colorblind-friendly color scheme and theme
     ggthemes::scale_fill_tableau() +
     ggthemes::theme_economist() +
+    # setting legend aesthetic details
     theme(
       legend.position = "top",
       legend.title = element_text(size=12),
@@ -158,7 +183,10 @@ base_df %>%
 
 ```{r}
 base_df %>%
+  # select only our variables of interest
   dplyr::select(goal, country, state) %>%
+  # filter to just 2 countries, 2 states (aka outcomes), and set a goal cap
+  # this is mostly just arbitrary for the purpose of an easy-to-read exemplar
   dplyr::filter(
     country %in% c("GB","FR"),
     goal <= 25000,
@@ -166,12 +194,14 @@ base_df %>%
     ) %>%
   # base ggplot call
   ggplot(., aes(x=goal, fill=country)) +
-    # specifying the histogram
+    # specifying the density plot, alpha modulates translucency
     geom_density(color = "black", alpha = 0.8) +
+    # facet wraps to show one pane per state
     facet_wrap(~state) +
     # picking a colorblind-friendly color scheme and theme
     ggthemes::scale_fill_tableau() +
     ggthemes::theme_economist() +
+    # setting legend aesthetic details
     theme(
       legend.position = "top",
       legend.title = element_text(size=12),
