--- a/eda-and-visualization/eda_and_visualization.Rmd
+++ b/eda-and-visualization/eda_and_visualization.Rmd
@@ -114,7 +114,7 @@ base_df %>%
   # filter to just 3 countries and set a goal cap
   # this is mostly just arbitrary for the purpose of an easy-to-read exemplar 
   dplyr::filter(
-    country %in% c("AU","DE","FR"),
+    country %in% c("IT","DE","FR"),
     goal <= 100000
     ) %>%
   # base ggplot call
@@ -139,6 +139,58 @@ base_df %>%
     )
 
 ```
+
+## Multi-Category Histogram with Custom-Delimited-Buckets
+
+Perhaps we are now beginning to develop an intuition as to which buckets are most key. We might then wish to build a histogram with custom-delimited-buckets, as done below. 
+
+```{r}
+base_df %>%
+  # select only our variables of interest 
+  dplyr::select(goal, country) %>%
+  # filter to just 3 countries and set a goal cap
+  # this is mostly just arbitrary for the purpose of an easy-to-read exemplar 
+  dplyr::filter(
+    country %in% c("IT","DE","FR")
+    ) %>%
+  dplyr::mutate(
+    custom_buckets = cut(
+      x = goal,
+      # sets the break points for cuts; see options for inclusion/exclusion details
+      breaks = c(0, 1000, 5000, 10000, 25000, 50000, 100000, Inf),
+      # ensures no use of scientific notation in labeling
+      dig.lab = 10
+      )
+  ) %>%
+  dplyr::group_by(country, custom_buckets) %>%
+  # gets the grouped by within-categor counts
+  dplyr::tally() %>%
+    # base ggplot call
+    ggplot(., aes(custom_buckets, n)) +
+      geom_bar(aes(fill = country), color = "black", position = "dodge", stat="identity") +
+      # takes care of the precise labeling; hjust/vjust and angle need to be set visually
+      geom_text(aes(label=n, group=country), hjust=-0.20, angle=90, position = position_dodge(width=1)) +
+      # picking a colorblind-friendly color scheme and theme
+      ggthemes::scale_fill_tableau() +
+      ggthemes::theme_economist() +
+      # custom axis limits; for this kind of chart I prefer to set these manually
+      scale_y_continuous(limits = c(0, 1250)) +
+      # setting legend and axis aesthetic details
+      theme(
+        legend.position = "top",
+        legend.title = element_text(size=12),
+        legend.text = element_text(size=12),
+        axis.text.x = element_text(size=8)
+        ) +
+      # takes care of all labeling
+      labs(
+        title = paste0("Count of Campagins by Goal Amount Bucket"),
+        y = "Number of Campaigns",
+        x = "Campaign Fundraising Goal Bucket (USD)",
+        fill = "Country of Origin"
+      )
+```
+
 
 # Density Plots
 
@@ -215,6 +267,9 @@ base_df %>%
       fill = "Country of Origin"
     )
 ```
+
+
+
 
 ```{r}
 
