change color palette back to viridis and re-order sections

--- a/eda-and-visualization/eda_and_visualization.Rmd
+++ b/eda-and-visualization/eda_and_visualization.Rmd
@@ -99,13 +99,21 @@ psych::describe(x = base_df, IQR = TRUE, omit = TRUE)
 ```
 
 
-# Histograms
+# Bespoke Visualizations
+
+## General Comments and Best Practices
+
+### Dealing with Color-Blindness 
+
+It is helpful to remember when crafting any visualization that one's audience might have some form of color blindness. Luckily, there are many handy ways to deal with this when working with the creation of custom graphics. In the various ggplots below, you will notice my use of the [viridis packages](https://cran.r-project.org/web/packages/viridis/vignettes/intro-to-viridis.html), which is a visually appealing set of color palettes that have the added benefit of being easier to read for those who are color blind. While this is my personally preferred method of dealing with color-blindness when creating visuals, one might also consider options like **scale_color_tableau()** and **scale_color_colorblind()**, both of which are from the [ggthemes package](https://cran.r-project.org/web/packages/ggthemes/ggthemes.pdf). 
+
+## Histograms
 
 Having gone through the basic EDA steps above, by this point one might have a variety of variables, relationships, or trends worthy of further exploration. The sections below walk through some visualizations that may prove useful in drilling down deeper into the data once the highest-level EDA is already taken care of. 
 
 For the histogram exemplars below, imagine that our basic EDA lead us to want to dive deeper into the question of **"what sort or relationships, trends, and/or distributional intricacies, if any, can we observe by examining campaign fundraising goals by country of origin?"**
 
-## Simple Multi-Category Histogram 
+### Simple Multi-Category Histogram 
 
 ```{r}
 base_df %>%
@@ -122,7 +130,7 @@ base_df %>%
     # specifying the histogram and the bin count
     geom_histogram(color = "black", position="dodge", bins=20) +
     # picking a colorblind-friendly color scheme and theme
-    ggthemes::scale_fill_tableau() +
+    viridis::scale_fill_viridis(discrete=TRUE, option="plasma") +
     ggthemes::theme_economist() +
     # setting legend aesthetic details 
     theme(
@@ -140,7 +148,7 @@ base_df %>%
 
 ```
 
-## Multi-Category Histogram with Custom-Delimited-Buckets
+### Multi-Category Histogram with Custom-Delimited-Buckets
 
 Perhaps we are now beginning to develop an intuition as to which buckets are most key. We might then wish to build a histogram with custom-delimited-buckets, as done below. 
 
@@ -171,7 +179,7 @@ base_df %>%
       # takes care of the precise labeling; hjust/vjust and angle need to be set visually
       geom_text(aes(label=n, group=country), hjust=-0.20, angle=90, position = position_dodge(width=1)) +
       # picking a colorblind-friendly color scheme and theme
-      ggthemes::scale_fill_tableau() +
+      viridis::scale_fill_viridis(discrete=TRUE, option="plasma") +
       ggthemes::theme_economist() +
       # custom axis limits; for this kind of chart I prefer to set these manually
       scale_y_continuous(limits = c(0, 1250)) +
@@ -192,11 +200,11 @@ base_df %>%
 ```
 
 
-# Density Plots
+## Density Plots
 
 There are times when visually one might prefer a density plot to a histogram, but in almost all cases they serve as substitutionary visualizatins. I find the one use case where density charts are particularly marginally useful as compared to histograms is when you want to compare distributional overlapping or deviation. 
 
-## 2 Probability Density Functions (PDFs) Compared
+### 2 Probability Density Functions (PDFs) Compared
 
 ```{r}
 base_df %>%
@@ -213,7 +221,7 @@ base_df %>%
     # specifying the density plot, alpha modulates translucency 
     geom_density(color = "black", alpha = 0.8) +
     # picking a colorblind-friendly color scheme and theme
-    ggthemes::scale_fill_tableau() +
+    viridis::scale_fill_viridis(discrete=TRUE, option="plasma") +
     ggthemes::theme_economist() +
     # setting legend aesthetic details
     theme(
@@ -231,7 +239,7 @@ base_df %>%
 
 ```
 
-## 3 PDFs Compared w/ Facets
+### 3 PDFs Compared w/ Facets
 
 ```{r}
 base_df %>%
@@ -251,7 +259,7 @@ base_df %>%
     # facet wraps to show one pane per state
     facet_wrap(~state) +
     # picking a colorblind-friendly color scheme and theme
-    ggthemes::scale_fill_tableau() +
+    viridis::scale_fill_viridis(discrete=TRUE, option="plasma") +
     ggthemes::theme_economist() +
     # setting legend aesthetic details
     theme(
